# Frenyum-SRC

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/RPC/: peer.rs
src/skeleton/: block.rs  blockchain.rs  transaction.rs
src/util/: key.rs  mod.rs
src/wallet/: mod.rs  wallet.rs
