[package]
name = "Frenyum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
sha2 = "0.10"
tokio = "1"
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
